--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,54 @@
 version: '3.0'
 
 services:
-  main:
-    container_name: main
-    build:
-      context: .
-    env_file:
-      - .env
-    volumes:
-      - .:/app
-      - /app/node_modules
-    ports:
-      - 5000:5000
-      - 9229:9229
-    command: npm run start:dev
-    depends_on:
-      - postgres
+  db:
+    container_name: postgres_dev
+    image: postgres:14-alpine
     restart: always
-  postgres:
-    container_name: postgres
-    image: postgres:14
-    env_file:
-      - .env
     environment:
-      PG_DATA: /var/lib/postgresql/data
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - db_data_dev:/var/lib/postgresql/data
     ports:
       - 5432:5432
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+
+  pqadmin:
+    container_name: pgadmin_dev
+    image: dpage/pgadmin4
     restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    volumes:
+      - pgadmin_data_dev:/var/lib/pgadmin
+    ports:
+      - 5050:80
+    depends_on:
+      - db
+  app:
+    container_name: app_dev
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+      args:
+        PORT: ${SERVICE_PORT}
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    restart: always
+    ports:
+      - ${SERVICE_PORT}:${SERVICE_PORT}
+    environment:
+      SERVICE_PORT: ${SERVICE_PORT}
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      DEPLOY_TYPE: docker
+    depends_on:
+      - db
 
 volumes:
-  pgdata:
+  db_data_dev:
+    driver: local
+  pgadmin_data_dev:
+    driver: local
